--- a/indexStyle.css
+++ b/indexStyle.css
@@ -1,19 +1,7 @@
 #mainMenu {
 	background-color:black;
 	height:5%;
-	
-	/* Property for flexbox*/
 	display:flex;
-	flex-direction:row;
-	flex-wrap:wrap;
-	justify-content:space-around;
-	align-items:center;
-	align-content:center;
-}
-
-#mainMenuLeftSide{
-	height:100%
-	display:block;
 }
 
 #mainMenuCompanyLogo{
@@ -25,35 +13,32 @@
 #mainMenuCompanyName {
 	float:left;
 	color:white;
-	margin-top:12%;
 	font: bold 16px Arial;
 	vertical-align:center;
 }
 
-#mainMenuMiddleSpace {
-	/* Property for flexbox*/
-	flex-grow:4;
-}
-
 .mainMenuButton {
 	color:white;
-	height:80px;
+	height:100%;
+	width:100%;
 	display:inline-block;
-	padding: 25% 30px 0px; 30px;
 	text-decoration: none;
 	font: bold 14px Arial;
 }
 
 .mainMenuButton:hover{
-	background-color:white;
+	background-color:red;
 	color:black;
 }
 
-#mainMenuRightSpace {
-	height:100px;
-	background-color:black;
-	width: 1px;
-	
-	/* Property for flexbox*/
-	flex-grow:0.1;
+.menuItem {
+	flex-grow:1;
+}
+
+.menuItem:nth-child(1){
+	white-space:nowrap;
+}
+
+.menuItem:nth-child(2){
+	flex-grow:3;
 }
