--- a/directoryStyle.css
+++ b/directoryStyle.css
@@ -52,24 +52,24 @@ body{
 	width:100%;
 	display:flex;
 	font-size:20px;
-	margin-top:5%;
+	margin-top:2%;
+	margin-bottom:2%;
 	vertical-align:center;
 	justify-content:space-around;
 }
 
 #centre a{
-	color:white;
+	color:black;
 }
 
 #centre table{
 	padding:5%;
-	background:#2B2B2B;
-	color:white;
+	color:black;
 }
 
 footer{
 	width:100%;
-	position:absolute;
+	position:relative;
 	bottom:0;
 	display:flex;
 	justify-content:space-around;
@@ -81,7 +81,9 @@ footer a{
 }
 
 footer div{
-	padding:10px;
+	width:100%;
+	text-align:center;
+	padding-top:10px;
 	padding-bottom:20px;
 	background:#2B2B2B;
 	color:white;
