--- a/directory.css
+++ b/directory.css
@@ -16,7 +16,7 @@ body{
 	font-family: barmeno;
 	font-size:20px;
 	text-decoration:none;
-	background: #2B2B2B;
+	background: #000000;
 	color: white;
 	text-align: center;
 	line-height:100px;
@@ -33,7 +33,7 @@ body{
 }
 
 #menu a:nth-child(1){
-	background:#2B2B2B;
+	background: #000000;;
 }
 
 #menu a:nth-child(2), a:nth-child(3){
@@ -72,15 +72,15 @@ footer{
 	display:flex;
 	justify-content:space-around;
 	text-decoration:none;
-	
-  margin-top: 45px;
-  height: 45px;
-  clear:both;
+  	margin-top: 45px;
+  	height: 45px;
+  	clear:both;
 }
 
 footer a{
 	font-family: barmeno;
 	color:white;
+	text-decoration:underline;
 }
 
 footer a:hover {
