--- a/css/sections/connexion.css
+++ b/css/sections/connexion.css
@@ -1,12 +1,13 @@
-@import url(design.css);
+@import url(../general/design.css);
 
 body{
 	height:100%;
 	width: 100%;
 	position:absolute;
+	font-family:sans-serif;
 }
 
-#menu {	
+#menu {
 	display:flex;
 }
 
@@ -14,7 +15,7 @@ body{
 	height: 100px;
 	flex-grow:1;
 	font-family: barmeno;
-	
+	font-size:20px;
 	text-decoration:none;
 	background: #000000;
 	color: white;
@@ -24,64 +25,39 @@ body{
 }
 
 #menu a:hover {
-	background:#634271;
-	
+	background:white;
+	color:#2B2B2B;	
 }
 
 #menu img{
 	height: 100%;
 }
 
-#menu a:hover:nth-child(1){
+#menu a:nth-child(1){
 	background:#000000;
 }
 
-#menu a:nth-child(2){
-	flex-grow:4;
+#menu a:nth-child(2), a:nth-child(3){
 	pointer-events: none;
     cursor: default;
 }
 
-div > h3 {
-	font-family: barmeno;
-	background: #FFFFFF;
-	color: #000000;
-	padding: 10px 2px;
-	text-transform: uppercase;	
-	font-size: 85%;
-}
-
-#list {
-	font-family:  barmeno;
-	line-height: 150%;
-	margin-top:10px;
-	padding:10px;
-	width:19%;
-	background: #000000;
-	color:white;
-}
-
-#list a{	
-	text-decoration:none;
-	margin-bottom: 0px;
-	color:white;
-}
-
-#list a:hover{
-	background: #634271;
-}
-
-
-#frame{
-width:77%;
-height:100%;
-border:0;
-margin-top:10px;
+#menu a:nth-child(3){
+	flex-grow:6;
 }
 
 #centre{
+	width:100%;
 	display:flex;
-	height:100%;
+	font-size:20px;
+	margin-top:2%;
+	margin-bottom:2%;
+	vertical-align:center;
+	justify-content:space-around;
+}
+
+#centre a{
+	color:white;
 }
 
 footer{
@@ -91,9 +67,10 @@ footer{
 	display:flex;
 	justify-content:space-around;
 	text-decoration:none;
-  	margin-top: 45px;
-  	height: 45px;
-  	clear:both;
+	
+  margin-top: 45px;
+  height: 45px;
+  clear:both;
 }
 
 footer a{
@@ -115,3 +92,21 @@ footer div{
 	color:white;
 	font-family: barmeno;
 }
+
+
+
+
+
+#buttonsSection {
+	margin-top:5%;
+	text-align: center;
+}
+
+.tableLabel{
+	vertical-align:top;
+}
+
+table {
+	border-collapse: separate; border-spacing: 15px;
+} 
+
