--- a/css/sections/directory.css
+++ b/css/sections/directory.css
@@ -1,4 +1,4 @@
-@import url(design.css);
+@import url(../general/design.css);
 
 body{
 	height:100%;
@@ -34,7 +34,7 @@ body{
 }
 
 #menu a:nth-child(1){
-	background:#000000;
+	background: #000000;;
 }
 
 #menu a:nth-child(2), a:nth-child(3){
@@ -48,6 +48,7 @@ body{
 
 #centre{
 	width:100%;
+	height:100%;
 	display:flex;
 	font-size:20px;
 	margin-top:2%;
@@ -56,8 +57,23 @@ body{
 	justify-content:space-around;
 }
 
-#centre a{
-	color:white;
+#centre a:hover{
+background-color: #634271;
+}
+
+#centre table{
+	padding:3%;
+	background-color:black;
+	border-spacing: 20px;
+    border-collapse:separate;
+    text-align:center;
+}
+
+tbody:before {
+    content: "-";
+    display: block;
+    line-height: 1em;
+    color: transparent;
 }
 
 footer{
@@ -67,10 +83,9 @@ footer{
 	display:flex;
 	justify-content:space-around;
 	text-decoration:none;
-	
-  margin-top: 45px;
-  height: 45px;
-  clear:both;
+  	margin-top: 45px;
+  	height: 45px;
+  	clear:both;
 }
 
 footer a{
@@ -92,21 +107,3 @@ footer div{
 	color:white;
 	font-family: barmeno;
 }
-
-
-
-
-
-#buttonsSection {
-	margin-top:5%;
-	text-align: center;
-}
-
-.tableLabel{
-	vertical-align:top;
-}
-
-table {
-	border-collapse: separate; border-spacing: 15px;
-} 
-
