Ajuster le lien directeur et contact

--- a/css/sections/contactus.css
+++ b/css/sections/contactus.css
@@ -1,25 +1,117 @@
 @import url(../general/design.css);
 
 body{
-	font-family: sans-serif;
+	height:100%;
+	width: 100%;
+	position:absolute;
+	font-family:sans-serif;
 }
 
-#phone{
-	font-family:barmeno;
+#menu {
+	display:flex;
 }
 
-a:hover{
+#menu a {
+	height: 100px;
+	flex-grow:1;
+	font-family: barmeno;
+	font-size:20px;
+	text-decoration:none;
+	background: #000000;
+	color: white;
+	text-align: center;
+	line-height:100px;
+	font-weight:600;
+}
+
+#menu a:hover {
+	background:white;
+	color:#2B2B2B;	
+}
+
+#menu img{
+	height: 100%;
+}
+
+#menu a:nth-child(1){
+	background: #000000;;
+}
+
+#menu a:nth-child(2), a:nth-child(3){
+	pointer-events: none;
+    cursor: default;
+}
+
+#menu a:nth-child(3){
+	flex-grow:6;
+}
+
+#centre{
+	width:100%;
+	height:100%;
+	display:flex;
+	font-size:20px;
+	margin-top:2%;
+	margin-bottom:2%;
+	vertical-align:center;
+	justify-content:space-around;
+}
+
+#centre a:hover{
+background-color: #634271;
+}
+
+#centre table{
+	padding:3%;
+	background-color:black;
+	border-spacing: 20px;
+    border-collapse:separate;
+    text-align:center;
+}
+
+tbody:before {
+    content: "-";
+    display: block;
+    line-height: 1em;
+    color: transparent;
+}
+
+footer{
+	width:100%;
+	position:relative;
+	bottom:0;
+	display:flex;
+	justify-content:space-around;
+	text-decoration:none;
+  	margin-top: 45px;
+  	height: 45px;
+  	clear:both;
+}
+
+footer a{
+	font-family: barmeno;
+	color:white;
+	text-decoration:underline;
+}
+
+footer a:hover {
 	background-color: #634271;
 }
 
-#contactInfo{
-	float:left;
-	display:inline;
-	margin-right:25px;
-	margin-bottom:25px;
+footer div{
+	width:100%;
+	text-align:center;
+	padding-top:10px;
+	padding-bottom:20px;
+	background:#000000;
+	color:white;
+	font-family: barmeno;
 }
 
-#contactLogo{
-	float:left;
-	display:inline;
+#phone{
+font-family:barmeno;
+}
+
+a:hover{
+background-color: #634271;
 }
