--- a/css/index.css
+++ b/css/index.css
@@ -6,6 +6,12 @@ body{
 	position:absolute;
 }
 
+svg {
+	position: relative;
+	fill:#FFFFFF;
+	top: 1.5em;
+}
+
 #menu {	
 	display:flex;
 }
@@ -29,7 +35,7 @@ body{
 }
 
 #menu img{
-	height: 100%;
+	height: 100%;	
 }
 
 #menu a:hover:nth-child(1){
@@ -115,3 +121,4 @@ footer div{
 	color:white;
 	font-family: barmeno;
 }
+
