--- a/css/sections/connection.css
+++ b/css/sections/connection.css
@@ -37,7 +37,7 @@ body{
 	background:#000000;
 }
 
-#menu a:nth-child(2), a:nth-child(3){
+#menu a:nth-child(2){
 	pointer-events: none;
     cursor: default;
 }
