--- a/css/sections/directory.css
+++ b/css/sections/directory.css
@@ -51,7 +51,7 @@ label {
 	background: #000000;;
 }
 
-#menu a:nth-child(2), a:nth-child(3){
+#menu a:nth-child(2){
 	pointer-events: none;
     cursor: default;
 }
