--- a/css/products/product.css
+++ b/css/products/product.css
@@ -5,9 +5,11 @@
 
 body {
 	color: #FFFFFF;
+	background-color: #2B2B2B;
 	font-family: sans-serif;
 }
-div > img {
+img {
+	display:none;
 	max-width: 300px;
 	float: left;
 	margin-right: 15px;
