--- a/css/sections/connection.css
+++ b/css/sections/connection.css
@@ -48,6 +48,7 @@ body{
 
 #centre{
 	width:100%;
+	height:100%;
 	display:flex;
 	font-size:20px;
 	margin-top:2%;
@@ -62,15 +63,13 @@ body{
 
 footer{
 	width:100%;
-	position:relative;
 	bottom:0;
 	display:flex;
 	justify-content:space-around;
 	text-decoration:none;
-	
-  margin-top: 245px;
-  height: 45px;
-  clear:both;
+  	margin-top: 0 px;
+  	height: 45px;
+  	clear:both;
 }
 
 footer a{
@@ -92,10 +91,6 @@ footer div{
 	color:white;
 	font-family: barmeno;
 }
-
-
-
-
 
 #buttonsSection {
 	margin-top:5%;
